<resources>
    <string name="app_name">Basketball Application</string>
    <string name="add_player">Add profile</string>
    <string name="sort_players">Sort</string>
    <string name="filter_players">Filter</string>
    <string name="sort_by_name">Sort alphabetically</string>
    <string name="sort_by_position">Sort by position</string>
    <string name="sort_by_date">Sort by date joined</string>
    <string name="show_all">Show all players</string>
    <string name="only_position">Show only one position</string>
    <string name="only_point_guards">Point guard</string>
    <string name="only_shooting_guards">Shooting guard</string>
    <string name="only_small_forwards">Small forward</string>
    <string name="only_power_forwards">Power forward</string>
    <string name="only_centers">Center</string>
</resources>
