<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_player"
        android:icon="@drawable/add"
        android:title="@string/add_player"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/sort_players"
        android:icon="@drawable/sort"
        android:title="@string/sort_players"
        app:showAsAction="always|withText">

        <menu android:id="@+id/sort_submenu"
            android:title="@string/sort_players">

            <item android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name"/>

            <item android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date"/>

            <item android:id="@+id/sort_by_position"
                android:title="@string/sort_by_position"/>

        </menu>

    </item>

    <item android:id="@+id/filter_players"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter_players"
        app:showAsAction="always|withText">

        <menu android:id="@+id/position_submenu"
            android:title="@string/filter_players">

            <item android:id="@+id/show_all"
                android:title="@string/show_all"
                android:visible="false" />

            <item android:id="@+id/only_point_guards"
                android:title="@string/only_point_guards"/>

            <item android:id="@+id/only_shooting_guards"
                android:title="@string/only_shooting_guards"/>

            <item android:id="@+id/only_small_forwards"
                android:title="@string/only_small_forwards"/>

            <item android:id="@+id/only_power_forwards"
                android:title="@string/only_power_forwards"/>

            <item android:id="@+id/only_centers"
                android:title="@string/only_centers"/>
        </menu>

    </item>

</menu>